--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 
 <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%">
 
-<table width="100%" height="100%" border="0" cellspacing="150" cellpadding="0"><tr><td align="center" valign="middle">
+<a href="https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA">
 
-<p><font size="30" face="arial" color="red"><p><b><a href="https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA" style="text-decoration:none ">點我</a></b></p></font></p>
-<imgsrc="http://ki8.win/129.jpg" width="100%" height="100%"/>
+<imgsrc="https://ki8.win/129.jpg" width="100%" height="100%"/>
 
 </body>
-</body>
-
-
