--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
-<html> 
-<head> 
-<meta http-equiv =“Content-Language”content =“zh-CN”> 
-<meta HTTP-EQUIV =“Content-Type”CONTENT =“text / html; charset = gb2312”> 
-<meta http-equiv =“refresh”content =“5; url = https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA”> 
-<title> Tao</ title> 
-</ head> 
+<html>
+<head>
+<meta http-equiv="Content-Language" content="zh-CN">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
+<meta http-equiv="refresh" content="5;url=https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA">
+<title>Taotao</title>
+</head>
 <body>
+
+<center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
+<center>私人网盘5秒自动进入<br/></center>
+<center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
+
+
+</body>
+</html> 
+
+<center>作者：Tao</center>
+<center>来源：网络</center>
+<center>版权声明：请在下载后24小时后删除</center>
