--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+  <table width="100%" height="100%" border="0" cellspacing="150" cellpadding="0"><tr><td align="center" valign="middle"> 
+  
 <center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
 <center>私人网盘5秒自动进入<br/></center>
 <center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
