--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<meta http-equiv="refresh" content="5;url=https://nbcc3-my.sharepoint.com/:f:/g/personal/wktcpdi_z1_tn/Etlx0CSgevpJmNmxgt2IYmEB96Tgdm01hXDWkzW7VrIvdA">
+<meta http-equiv="refresh" content="5;url=https://vipmail-my.sharepoint.cn/:f:/g/personal/wktcpdi_e1_tn/EtkjwpuHx_1FvemA55lzyG0B8Tb2RjjBsIdcNb4AiVexWg?e=cJ7Uy0">
 <title>Taotao</title>
 </head>
 <body>
