--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<meta http-equiv="refresh" content="5;url=https://vipmail-my.sharepoint.cn/:f:/g/personal/wktcpdi_e1_tn/EtkjwpuHx_1FvemA55lzyG0B8Tb2RjjBsIdcNb4AiVexWg?e=cJ7Uy0">
+<meta http-equiv="refresh" content="0;url=https://vipmail-my.sharepoint.cn/:f:/g/personal/wktcpdi_e1_tn/EtkjwpuHx_1FvemA55lzyG0B8Tb2RjjBsIdcNb4AiVexWg?e=cJ7Uy0">
 <title>Taotao</title>
 </head>
 <body>
@@ -10,13 +10,10 @@
   <table width="100%" height="100%" border="0" cellspacing="150" cellpadding="0"><tr><td align="center" valign="middle"> 
   
 <center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
-<center>私人网盘5秒自动进入<br/></center>
+<center><br/></center>
 <center>( ^_^ )( ^_^ )( ^_^ )<br/></center>
 
 
 </body>
 </html> 
 
-<center>作者：Tao</center>
-<center>来源：网络</center>
-<center>版权声明：请在下载后24小时后删除</center>
